<resources>
    <string name="app_name">Export Helper</string>


    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="text_settings">Settings</string>

    <string name="text_products">Products</string>

    <!-- Example settings for Notifications -->
    <string name="text_product">Product</string>

    <string name="text_orders">Orders</string>

    <string name="text_add">Add</string>
    <string name="text_customer">Customer</string>

    <string name="text_save">Save</string>


    <!-- Text  -->
    <string name="text_brand">Brand</string>
    <string name="text_model">Model</string>
    <string name="text_purchase_price">Purchase price</string>
    <string name="text_sale_price">Sale price</string>
    <string name="text_g">g</string>
    <string name="str_kg">kg</string>
    <string name="text_euro">EUR</string>
    <string name="text_milk_powder">Milk powder</string>
    <string name="text_clothes">Clothes</string>
    <string name="text_cosmetic">Cosmetic</string>
    <string name="text_luxury">Luxury</string>
    <string name="text_alcohol">Alcohol</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_type">Type</string>
    <string name="text_from">From</string>
    <string name="text_approach">Approach</string>
    <string name="text_description">Description</string>
    <string name="str_product_purchase_price_display">%s%.2f</string>
    <string name="str_product_sale_price_display">%s%.2f</string>
    <string name="str_product_displayName">%s %s %s</string>
    <string name="hint_product_model">Product model</string>
    <string name="hint_product_brand">Product brand</string>
    <string name="hint_product_name">Product name</string>
    <string name="created_at">"Created at: %s"</string>

    <string name="hint_add_product_name">product name*</string>
    <string name="hint_add_product_name_ch">product name(chinese)</string>
    <string name="hint_add_product_brand">Brand*</string>

    <string name="hint_add_product_brand_ch">Brand(chinese)</string>
    <string name="hint_add_product_model">Model</string>
    <string name="hint_add_product_model_ch">Model(chinese)</string>
    <string name="hint_add_product_netweight">Net weight</string>
    <string name="hint_add_product_type">Product type</string>
    <string name="hint_add_product_pruchase_price">@string/text_purchase_price</string>
    <string name="hint_add_product_sale_price">@string/text_sale_price</string>
    <string name="hint_add_product_made_in">Made in</string>
    <string name="hint_add_product_purchase_approach">Purchase approach</string>
    <string name="hint_add_product_description">Description</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="product_brand_zh">Brand(chinese)</string>
    <string name="product_name_zh">Name(chinese)</string>
    <string name="product_model_zh">Model(chinese)</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_name">Name</string>
    <string name="text_phone_number">Phone number</string>

    <string name="text_address">Address</string>
    <string name="text_email">Email</string>
    <string name="text_street">Street</string>
    <string name="text_fujian">福建省</string>
    <string name="text_xiamen">厦门市</string>
    <string name="text_simingqu">思明区</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="text_id_number">ID Number</string>
    <string name="error_id_number">Please provide 13-digit ID number</string>
    <string name="hint_login_email">Email</string>
    <string name="text_or">Or Sign in with</string>
    <string name="text_login_register">Login or Register</string>
    <string name="text_login">Login</string>
    <string name="error_email_invalid">Invalid Email</string>
    <string name="error_email_not_exist">Email does not exist or has been disabled</string>
    <string name="error_pwd_invalid">Password must contain at least 6 characters</string>
    <string name="error_pwd_weak">Password is not strong enough</string>
    <string name="error_pwd_wrong">Wrong password.</string>
    <string name="require_login">Please login or register</string>
    <string name="login_create_account">You don\'t have a account, then <a>create one</a></string>
    <string name="text_register">Register</string>
    <string name="error_email_exist">Email already exist</string>
    <string name="text_add_product_type">Add type</string>
    <string name="argument_add_product_ID" translatable="false">argument_add_product_id</string>
    <string name="text_add_or_modify_product">Add or modify product</string>
    <string name="text_next">next</string>
    <string name="text_previous">previous</string>
    <string name="add_product_title">Please edit the following product information</string>
    <string name="text_required">*Required</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_multiple_title">Multiple selection</string>
    <string name="select_product_type_title">Select product types</string>
    <string name="text_finish">Finish</string>
    <string name="text_picture">Picture</string>
    <string name="add_product_picture_hint">Pictures. Maximum 10 pictures</string>
    <string name="text_add_picture">Add pictures</string>
    <string name="add_product_picture_required">Product basic information(*required)</string>

    <string name="icon_buy">&#xe70d;</string>
    <string name="icon_sale">&#xe70b;</string>
    <string name="icon_location">&#xe6f3;</string>
    <string name="icon_currency_usd">&#xe624;</string>
    <string name="icon_currency_euro">&#xe61a;</string>
    <string name="icon_currency_cny">&#xe619;</string>
    <string name="icon_currency_gbp">&#xe6e5;</string>
    <string name="icon_kg">&#xe66f;</string>
    <string name="icon_form">&#xe6a2;</string>
    <string name="text_warning">Warning</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cancel">Cancel</string>


    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />

    <string-array name="product_types">
        <item>Milk powder</item>
        <item>Cosmetic</item>
        <item>Nutrition</item>
        <item>Medicine</item>
        <item>Other</item>
    </string-array>
</resources>
