<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.jiujiu.helper.util.Conv" />

        <variable
            name="viewModel"
            type="com.jiujiu.helper.ui.products.add.ProductAddViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.jiujiu.helper.ui.products.add.AddProductFragment">

            <ImageButton
                android:id="@+id/button_add_product_image"
                android:layout_width="@dimen/product_image_height"
                android:layout_height="@dimen/product_image_height"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_add_white_128dp"
                android:visibility="@{safeUnbox(viewModel.hasImage) ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/product_add_image"
                android:layout_width="0dp"
                android:layout_height="@dimen/product_image_height"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                android:src="@drawable/product_placeholder"
                android:visibility="@{safeUnbox(viewModel.hasImage)? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_add_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_type"
                style="@style/TextAppearance.helper.textInput.dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_type"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_model">

                <AutoCompleteTextView
                    android:id="@+id/et_product_type"
                    style="@style/TextAppearance.helper.edit.unable"
                    productTypes="@{viewModel.productTypeLiveData}"
                    typeId="@={viewModel.product.typeId}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_brand"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_brand"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_brand"
                    style="@style/TextAppearance.helper.edit.title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.product.brand}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_brand_ch"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_brand_ch"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_brand">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_brand_ch"
                    style="@style/TextAppearance.helper.edit.title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.product.brandZh}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_name"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_name"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_brand_ch">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_name"
                    style="@style/TextAppearance.helper.edit.title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.product.name}"
                    tools:text="Profutuna 2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_name_ch"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_name_ch"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_name_ch"
                    style="@style/TextAppearance.helper.edit.title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.product.nameZh}"
                    tools:text="蓝版2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_model"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_model"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_name_ch">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_model"
                    style="@style/TextAppearance.helper.edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.product.model}"
                    tools:text="2" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_netweight"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_netweight"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_type">

                <com.jiujiu.helper.ui.widget.TextInputEditTextFix
                    android:id="@+id/et_product_netweight"
                    style="@style/TextAppearance.helper.edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={Conv.doubleToString(viewModel.product.netWeight)}"
                    app:suffix="@string/str_kg"
                    tools:text="0.8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_purchase"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="@string/hint_add_product_pruchase_price"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toStartOf="@+id/spinner_product_purchase_currency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_netweight">

                <com.jiujiu.helper.ui.widget.TextInputEditTextFix
                    android:id="@+id/et_product_purchase"
                    style="@style/TextAppearance.helper.edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={Conv.doubleToString(viewModel.product.purchasePrice)}"
                    tools:text="15.2" />

                <!--android:text="@={Conv.currencyToCode(viewModel.product.purchaseCurrency)}"-->

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_product_purchase_currency"
                entries="@{ viewModel.currencies}"
                selectedValue="@={viewModel.product.purchaseCurrency}"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/til_product_purchase"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/til_product_purchase"
                app:layout_constraintTop_toBottomOf="@+id/til_product_netweight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_sale"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="@string/hint_add_product_sale_price"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toStartOf="@+id/spinner_product_purchase_currency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_purchase">

                <com.jiujiu.helper.ui.widget.TextInputEditTextFix
                    android:id="@+id/et_product_sale"
                    style="@style/TextAppearance.helper.edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={Conv.doubleToString(viewModel.product.salePrice)}"
                    tools:text="15.2" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_product_sale_currency"
                entries="@{ viewModel.currencies}"
                selectedValue="@={viewModel.product.saleCurrency}"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/til_product_sale"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/til_product_sale"
                app:layout_constraintTop_toBottomOf="@+id/til_product_purchase" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_made_in"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_origin"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_sale">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_origin"
                    style="@style/TextAppearance.helper.edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.product.madeIn}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_purchase_approach"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_purchase_approach"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_made_in">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_purchase_approach"
                    style="@style/TextAppearance.helper.edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.product.purchaseApproach}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_description"
                style="@style/TextAppearance.helper.textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_product_description"
                app:hintTextAppearance="@style/TextAppearance.helper.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_purchase_approach">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_description"
                    style="@style/TextAppearance.helper.edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.product.description}"
                    tools:text="Description" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_padding_normal"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_marginRight="@dimen/text_padding_normal"
                android:onClick="@{ ()-> viewModel.saveProduct()}"
                android:text="@string/text_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
